--- a/UniJoy/App.config
+++ b/UniJoy/App.config
@@ -5,10 +5,10 @@
   </configSections>
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="C:\\Users\\user\\source\\repos\\UniJoy\\Logs\\logs.log"/>
+      <param name="File" value="C:\Users\user\Documents\GitHub\Neuro-Lab-Project\Logs\log.log"/>
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <encoding value ="utf-8" />
-      <appendToFile value ="true"/>
+      <appendToFile value ="false"/>
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="10MB" />
       <rollingStyle value="Date"/>
